# lamin-cli

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: build.yml
lamin-site-assets-clone/.lamindb/: storage_uid.txt
lamin_cli/: __init__.py  __main__.py  _annotate.py  _cache.py  _claudecode.py  _connect.py  _context.py  _delete.py  _get.py  _io.py  _load.py  _migration.py  _notebook.py  _notes.py  _repl.py  _rest.py  _save.py  _settings.py  _snapshot.py  _stage.py  _transform.py  urls.py
lamin_cli/_rest/: README.md  __init__.py  _click.py  _client.py  _mutations.py  _query.py  _schema.py  _statistics.py  _utils.py
lamin_cli/agents/: __init__.py  _common.py  claude.py  copilot.py
lamin_cli/clone/: _clone_verification.py  create_sqlite_clone_and_import_db.py
lamin_cli/compute/: README.md  _modal_runner.py  _modal_script_function.py  modal.py
lamin_cli/hub/: README.md  __init__.py  _click.py  _client.py  _mutations.py  _query.py  _statistics.py  _utils.py  branches.py  switch.py
tests/: conftest.py  test_cli.py  test_exec.py  test_get.py  test_load.py  test_migrate.py  test_multi_process.py  test_notebooks.py  test_parse_uid_from_code.py  test_rest.py  test_save_files.py  test_save_notebooks.py  test_save_r_code.py  test_save_r_scipts.py  test_save_scripts.py  test_scripts.py  test_stage.py
tests/agents/: conftest.py  test_track_claude.py  test_track_copilot.py
tests/core/: conftest.py  test_annotate_with_readme.py  test_claudecode.py  test_connect_here.py  test_create_switch.py  test_describe.py  test_exec.py  (+23 more)
(+47 files in other folders)
